--- a/apps/azerothcore/ac-authserver-deployment.yaml
+++ b/apps/azerothcore/ac-authserver-deployment.yaml
@@ -68,7 +68,9 @@ spec:
                   key: USER_CONF_PATH
                   name: azerothcore-wotlk-conf-dist-env-ac
           image: acore/ac-wotlk-authserver:master
-          command: ["/bin/bash", "-c", "sleep infinity"]
+          # command: ["/bin/bash", "-c", "sleep infinity"]
+          securityContext:
+            fsGroup: 1000
           name: ac-authserver
           ports:
             - containerPort: 3724
