--- a/apps/azerothcore/ac-db-import-deployment.yaml
+++ b/apps/azerothcore/ac-db-import-deployment.yaml
@@ -19,6 +19,8 @@ spec:
         io.kompose.network/azerothcore-wotlk-ac-network: "true"
         io.kompose.service: ac-db-import
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
         - env:
             - name: AC_CHARACTER_DATABASE_INFO
