--- a/apps/azerothcore/values-mysql.yaml
+++ b/apps/azerothcore/values-mysql.yaml
@@ -3,3 +3,4 @@ auth:
   ## ref: https://github.com/bitnami/containers/tree/main/bitnami/mysql#setting-the-root-password-on-first-run
   ##
   rootPassword: "password"
+  database: "acore_world"
