--- a/apps/azerothcore/templates/ac-worldserver-deployment.yaml
+++ b/apps/azerothcore/templates/ac-worldserver-deployment.yaml
@@ -29,11 +29,11 @@ spec:
                   key: AC_CCACHE
                   name: azerothcore-wotlk-conf-dist-env-ac
             - name: AC_CHARACTER_DATABASE_INFO
-              value: ac-database;3306;root;password;acore_characters
+              value: azerothcore-mysql;3306;root;password;acore_characters
             - name: AC_DATA_DIR
               value: /azerothcore/env/dist/data
             - name: AC_LOGIN_DATABASE_INFO
-              value: ac-database;3306;root;password;acore_auth
+              value: azerothcore-mysql;3306;root;password;acore_auth
             - name: AC_LOGS_DIR
               value: /azerothcore/env/dist/logs
             - name: AC_RESTARTER_BINFILE
