--- a/apps/azerothcore/templates/ac-client-data-persistentvolumeclaim.yaml
+++ b/apps/azerothcore/templates/ac-client-data-persistentvolumeclaim.yaml
@@ -7,7 +7,7 @@ metadata:
   name: ac-client-data
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
