--- a/apps/azerothcore/templates/ac-worldserver-deployment.yaml
+++ b/apps/azerothcore/templates/ac-worldserver-deployment.yaml
@@ -52,7 +52,7 @@ spec:
                   key: AC_RESTARTER_WITHGDB
                   name: azerothcore-wotlk-conf-dist-env-ac
             - name: AC_WORLD_DATABASE_INFO
-              value: ac-database;3306;root;password;acore_world
+              value: azerothcore-mysql;3306;root;password;acore_world
             - name: CSCRIPTS
               valueFrom:
                 configMapKeyRef:
