--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -101,6 +101,16 @@ home-assistant:
               limit: 8
               stationboard:
               - Littau, Rönnimoosrain
+            - platform: swiss_public_transport_mod
+              name: test1
+              limit: 8
+              stationboard:
+              - Luzern, Rönnimoosrain
+            - platform: swiss_public_transport_mod
+              name: test2
+              limit: 8
+              stationboard:
+              - Luzern, Bahnhof
   addons:
     codeserver:
       enabled: true
