--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -1,7 +1,7 @@
 nextcloud:
   lifecycle:
-    postStartCommand:
-      - "php occ maintenance:mode --off"
+    # postStartCommand:
+    #   - "php occ maintenance:mode --off"
   nextcloud:
     host: &host nextcloud.tribz.cloud
     existingSecret:
