--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -35,6 +35,7 @@ nextcloud:
       hajimari.io/appName: Nextcloud
       hajimari.io/icon: google-drive
       nginx.ingress.kubernetes.io/proxy-body-size: 8G
+      nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
   postgresql:
     enabled: true
     global:
