--- a/system/monitoring-system/kustomization.yaml
+++ b/system/monitoring-system/kustomization.yaml
@@ -16,7 +16,7 @@ helmCharts:
   valuesFile: values.yaml
   includeCRDs: true
 
-patchesJson6902:
+patches:
   - target:
       group: apiextensions.k8s.io
       version: v1
