--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -94,7 +94,7 @@ grafana:
       allow_sign_up: true
       name: Dex
       client_id: grafana-sso
-      client_secret: $__env{GRAFANA_SSO_CLIENT_SECRET}
+      # client_secret: $__env{GRAFANA_SSO_CLIENT_SECRET}
       scopes: openid profile email groups
       auth_url: https://dex.tribz.cloud/auth
       token_url: https://dex.tribz.cloud/token
