--- a/apps/palworld/templates/deployment.yaml
+++ b/apps/palworld/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
           #   periodSeconds: 5
           #   timeoutSeconds: 5
           volumeMounts:
-          - mountPath: /game
+          - mountPath: /op/palworld/Pal/Saved
             name: palworld-game
       volumes:
         - name: palworld-game
