--- a/apps/palworld/templates/deployment.yaml
+++ b/apps/palworld/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: palworld
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
         - name: palworld
           securityContext:
