--- a/apps/palworld/templates/deployment.yaml
+++ b/apps/palworld/templates/deployment.yaml
@@ -26,6 +26,14 @@ spec:
           env:
             - name: TZ
               value: Europe/Zurich
+            - name: SERVER_NAME
+              value: Biohazard
+            - name: ADMIN_PASSWORD
+              value: bioadmin
+            - name: SERVER_PASSWORD
+              value: bioplayer
+            - name: RCON_ENABLED
+              value: true
             # - name: ALWAYS_UPDATE_ON_START
             #   value: "1"
           ports:
