--- a/system/kasten-io/templates/nfs-pv.yaml
+++ b/system/kasten-io/templates/nfs-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-   name: k10-backup-nfs-pv
+   name: k10-backup-nfs-pv-2
 spec:
    capacity:
       storage: 10Gi
