--- a/system/kasten-io/templates/nfs-pv.yaml
+++ b/system/kasten-io/templates/nfs-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-   name: k10-backup-nfs-pv-2
+   name: k10-backup-nfs-pv
 spec:
    capacity:
       storage: 10Gi
@@ -14,5 +14,5 @@ spec:
       - hard
       - nfsvers=4.1
    nfs:
-      path: /mnt/tank/k8s/nfs/k10-backup-2
+      path: /mnt/tank/k8s/nfs/k10-backup
       server: truenas.tribz.cloud
