--- a/system/kasten-io/templates/nfs-pvc.yaml
+++ b/system/kasten-io/templates/nfs-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-   name: k10-backup-nfs-pvc-2
+   name: k10-backup-nfs-pvc
 spec:
    storageClassName: nfs
    accessModes:
