--- a/platform/gitea-new/values.yaml
+++ b/platform/gitea-new/values.yaml
@@ -37,3 +37,10 @@ gitea:
         ENABLED: false
       webhook:
         ALLOWED_HOST_LIST: private
+  postgresql-ha:
+    enabled: false
+  postgresql:
+    enabled: true
+  redis-cluster:
+    cluster:
+      nodes: 1
