--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -1,6 +1,7 @@
 home-assistant:
   hostNetwork: true
   dnsPolicy: ClusterFirstWithHostNet
+  replicas: 0
   ingress:
     main:
       enabled: true
